Fixed IE z-index issue (menu overlap)

--- a/tbx/core/static/torchbox/css/components/_hero.scss
+++ b/tbx/core/static/torchbox/css/components/_hero.scss
@@ -47,7 +47,7 @@
   right: 0;
   left: 0;
   overflow: visible;
-  z-index: 3;
+  z-index: 6;
   @media #{$tablet} {
     position: fixed;
     top: 400px;
