--- a/tbx/core/static/torchbox/css/components/_overrides.scss
+++ b/tbx/core/static/torchbox/css/components/_overrides.scss
@@ -31,7 +31,7 @@
   @media #{$tablet} {
     background: white;
     position: relative;
-    z-index: 2;
+    z-index: 5;
     margin-top: calc(555px + 109px);
     padding-top: 60px;
 
